# enoda_project

./: README.md  forecasting_aggregated.ipynb  forecasting_nodal.ipynb  pyproject.toml
data/: holidays.txt
